--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.11",
+    "axios": "^1.3.5",
+    "expo": "^46.0.21",
+    "expo-scroll-view": "^0.0.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-safe-area-context": "4.5.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "expo-updates": "~0.14.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
